# partages-llm

./: .gitignore  README.md  pyproject.toml
configs/clm-corpus-processing/: validation-set-config.json
configs/fsdp/: apertus_fsdp_config.json  llama_fsdp_config.json  mistral_fsdp_config.json  qwen_fsdp_config.json
configs/lm-eval/: task-groups-flat.yaml
configs/templates/mcqa-processing/: fmcqa-instruction-v0.txt  mcq-instructions-fewshot-interstitial.jinja  mediqal-instructions-v0.jinja
configs/train/clm/: cpt-config-qwen8.json
configs/train/sft/: sft-config-partages-qwen8.json
scripts/eda/: topic_modelling.py
scripts/eval/: do-eval-slurm.sh  do-eval.sh  mcq_inference.py  run-task-group.sh
scripts/postprocess/: process_lm_eval_output.py
scripts/preprocess/: clean_clm_dataset.py  deduplicate_clm_dataset.py  download_dataset_from_limics.py  instruction_processing_pipeline_base.py  instruction_processing_pipeline_prompts.py  make_clm_dataset_mix.py  prepare_clm_tokens.py  unroll_sft_config.py
scripts/preprocessing/: clean_clm_dataset.py  download_dataset_from_limics.py  instruction_processing_pipeline_base.py  make_clm_dataset_mix.py  prepare_clm_tokens.py
scripts/train/clm/: run_clm_trainer.py
scripts/train/sft/: orchestrate-gridsearch-slurm.sh  run_sft_trainer.py
scripts/train/sft/hps-run-scripts/: run-hps-qwen8.sh
scripts/train/sts/: train_clister.py
src/partages-llm/: processing.py  pyproject.toml  training_tools.py  utils.py
src/partages-llm/eval/: harness_datasets.py  mcqa.py  post_processing.py
src/partages_llm/: processing.py  training_tools.py  utils.py
src/partages_llm/eval/: harness_datasets.py  mcqa.py  post_processing.py
