[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "partages_llm"
version = "0.1.0"
description = "A short description"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Aidan Mannion", email = "aidan.mannion@univ-grenoble-alpes.fr" }
]
dependencies = [
    "",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = ""