[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/partages-llm"]

[project]
name = "partages_llm"
version = "0.1.0"
description = "decoder model experimentation for PARTAGES phase 1"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Aidan Mannion", email = "aidan.mannion@univ-grenoble-alpes.fr" }
]
dependencies = [
    "accelerate==1.6.0",
    "numpy",
    "torch==2.8.0",
    "datasets>=4.4.1",
    "jinja2",
    "pandas>=2.0.0",
    "transformers>=4.57.1",
    "peft>=0.17.1",
    "hdbscan",
    "umap-learn>=0.5",
    "sentence-transformers>=5.1.2",
    "scikit-learn==1.6.1",
    "stop-words==2025.11.4"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = ""